{
  "version": 4,
  "terraform_version": "1.15.0",
  "serial": 44,
  "lineage": "d76421f6-4c08-7ef6-00ca-cd821c296d2e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cdc558e85873145",
            "arn": "arn:aws:ec2:us-east-1:537592759357:elastic-ip/eipalloc-02cdc558e85873145",
            "association_id": "eipassoc-082c34a4a5e8c7114",
            "domain": "vpc",
            "id": "eipalloc-02cdc558e85873145",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0217e4f18a9bebf32",
            "private_dns": "ip-10-0-1-167.ec2.internal",
            "private_ip": "10.0.1.167",
            "public_dns": "ec2-32-193-250-5.compute-1.amazonaws.com",
            "public_ip": "32.193.250.5",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "eipalloc-02cdc558e85873145",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5e7dc8f8a4997e3",
            "arn": "arn:aws:ec2:us-east-1:537592759357:elastic-ip/eipalloc-0a5e7dc8f8a4997e3",
            "association_id": "eipassoc-04d07ba64169e6ae3",
            "domain": "vpc",
            "id": "eipalloc-0a5e7dc8f8a4997e3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06cd4824b5834c6ec",
            "private_dns": "ip-10-0-2-84.ec2.internal",
            "private_ip": "10.0.2.84",
            "public_dns": "ec2-54-145-69-14.compute-1.amazonaws.com",
            "public_ip": "54.145.69.14",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "eipalloc-0a5e7dc8f8a4997e3",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0397ca8b680a9745f",
            "arn": "arn:aws:ec2:us-east-1:537592759357:instance/i-0691e6eed35692d9e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0691e6eed35692d9e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cloud",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04cb7b9b636594c5e"
              }
            ],
            "primary_network_interface_id": "eni-04cb7b9b636594c5e",
            "private_dns": "ip-10-0-1-57.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.57",
            "public_dns": "ec2-32-192-235-74.compute-1.amazonaws.com",
            "public_ip": "32.192.235.74",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-063c23380e0428934",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00375a2f3bac72543",
            "tags": {
              "Environment": "dev",
              "Name": "Bastion_host",
              "Project": "techcorp"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Bastion_host",
              "Project": "techcorp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a3d3bc05e8785de6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "i-0691e6eed35692d9e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.techcorp_public_subnet_1",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0397ca8b680a9745f",
            "arn": "arn:aws:ec2:us-east-1:537592759357:instance/i-033de5375bfe81a30",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-033de5375bfe81a30",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "cloud",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e147eb52d1701216"
              }
            ],
            "primary_network_interface_id": "eni-0e147eb52d1701216",
            "private_dns": "ip-10-0-3-64.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.64",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0cf7eae7b026fd65c",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0972274ce46d05394",
            "tags": {
              "Name": "postgresDB"
            },
            "tags_all": {
              "Name": "postgresDB"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00bf5e9f828131053"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "i-033de5375bfe81a30",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.db_sg",
            "aws_security_group.web_sg",
            "aws_subnet.techcorp_private_subnet_1",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0397ca8b680a9745f",
            "arn": "arn:aws:ec2:us-east-1:537592759357:instance/i-0ab16fe95826df0ec",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab16fe95826df0ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cloud",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c627a03619a70127"
              }
            ],
            "primary_network_interface_id": "eni-0c627a03619a70127",
            "private_dns": "ip-10-0-3-107.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.107",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-09c38c72284091e72",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0972274ce46d05394",
            "tags": {
              "Environment": "dev",
              "Name": "web-server-1",
              "Project": "techcorp"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-server-1",
              "Project": "techcorp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cd1bacd121596f14"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "i-0ab16fe95826df0ec",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.techcorp_private_subnet_1",
            "aws_subnet.techcorp_private_subnet_2",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0397ca8b680a9745f",
            "arn": "arn:aws:ec2:us-east-1:537592759357:instance/i-0bb851c2e54ace761",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb851c2e54ace761",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cloud",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00e42e00e044b6029"
              }
            ],
            "primary_network_interface_id": "eni-00e42e00e044b6029",
            "private_dns": "ip-10-0-4-105.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.105",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0ad4c308f42b98c21",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01da7fafc903f4acc",
            "tags": {
              "Environment": "dev",
              "Name": "web-server-2",
              "Project": "techcorp"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-server-2",
              "Project": "techcorp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cd1bacd121596f14"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "i-0bb851c2e54ace761",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.techcorp_private_subnet_1",
            "aws_subnet.techcorp_private_subnet_2",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537592759357:internet-gateway/igw-096ed1a448ce1c9a8",
            "id": "igw-096ed1a448ce1c9a8",
            "owner_id": "537592759357",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-igw"
            },
            "tags_all": {
              "Name": "techcorp-igw"
            },
            "vpc_id": "vpc-0f4e176506a09d4b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "igw-096ed1a448ce1c9a8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:537592759357:loadbalancer/app/techcorp-alb/66191720f35642bc",
            "arn_suffix": "app/techcorp-alb/66191720f35642bc",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "techcorp-alb-1743233692.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:537592759357:loadbalancer/app/techcorp-alb/66191720f35642bc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "techcorp-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-065e258342da668a5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00375a2f3bac72543"
              },
              {
                "subnet_id": "subnet-09599c10ad81927ba"
              }
            ],
            "subnets": [
              "subnet-00375a2f3bac72543",
              "subnet-09599c10ad81927ba"
            ],
            "tags": {
              "Name": "TechCorp-ALB"
            },
            "tags_all": {
              "Name": "TechCorp-ALB"
            },
            "vpc_id": "vpc-0f4e176506a09d4b6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:537592759357:loadbalancer/app/techcorp-alb/66191720f35642bc"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.techcorp_public_subnet_1",
            "aws_subnet.techcorp_public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:537592759357:listener/app/techcorp-alb/66191720f35642bc/3896d895a3763c58",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:537592759357:targetgroup/LB-tg/feae4c30dc9c1f6e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:537592759357:listener/app/techcorp-alb/66191720f35642bc/3896d895a3763c58",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:537592759357:loadbalancer/app/techcorp-alb/66191720f35642bc",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:537592759357:listener/app/techcorp-alb/66191720f35642bc/3896d895a3763c58"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "aws_subnet.techcorp_public_subnet_1",
            "aws_subnet.techcorp_public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:537592759357:targetgroup/LB-tg/feae4c30dc9c1f6e",
            "arn_suffix": "targetgroup/LB-tg/feae4c30dc9c1f6e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:537592759357:targetgroup/LB-tg/feae4c30dc9c1f6e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:537592759357:loadbalancer/app/techcorp-alb/66191720f35642bc"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "LB-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "LB-tg"
            },
            "tags_all": {
              "Name": "LB-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f4e176506a09d4b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:537592759357:targetgroup/LB-tg/feae4c30dc9c1f6e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:537592759357:targetgroup/LB-tg/feae4c30dc9c1f6e,i-0ab16fe95826df0ec,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:537592759357:targetgroup/LB-tg/feae4c30dc9c1f6e",
            "target_id": "i-0ab16fe95826df0ec"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:537592759357:targetgroup/LB-tg/feae4c30dc9c1f6e",
            "target_id": "i-0ab16fe95826df0ec"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.techcorp_private_subnet_1",
            "aws_subnet.techcorp_private_subnet_2",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:537592759357:targetgroup/LB-tg/feae4c30dc9c1f6e,i-0bb851c2e54ace761,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:537592759357:targetgroup/LB-tg/feae4c30dc9c1f6e",
            "target_id": "i-0bb851c2e54ace761"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:537592759357:targetgroup/LB-tg/feae4c30dc9c1f6e",
            "target_id": "i-0bb851c2e54ace761"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.techcorp_private_subnet_1",
            "aws_subnet.techcorp_private_subnet_2",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cdc558e85873145",
            "association_id": "eipassoc-082c34a4a5e8c7114",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0b152bab832ba4a79",
            "network_interface_id": "eni-0217e4f18a9bebf32",
            "private_ip": "10.0.1.167",
            "public_ip": "32.193.250.5",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00375a2f3bac72543",
            "tags": {
              "Name": "techcorp-nat-1"
            },
            "tags_all": {
              "Name": "techcorp-nat-1"
            },
            "vpc_id": "vpc-0f4e176506a09d4b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "nat-0b152bab832ba4a79",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_internet_gateway.igw",
            "aws_subnet.techcorp_public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5e7dc8f8a4997e3",
            "association_id": "eipassoc-04d07ba64169e6ae3",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0a7bec170a05007b9",
            "network_interface_id": "eni-06cd4824b5834c6ec",
            "private_ip": "10.0.2.84",
            "public_ip": "54.145.69.14",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09599c10ad81927ba",
            "tags": {
              "Name": "techcorp-nat-2"
            },
            "tags_all": {
              "Name": "techcorp-nat-2"
            },
            "vpc_id": "vpc-0f4e176506a09d4b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "nat-0a7bec170a05007b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_internet_gateway.igw",
            "aws_subnet.techcorp_public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537592759357:route-table/rtb-0f139ddfe63722b9c",
            "id": "rtb-0f139ddfe63722b9c",
            "owner_id": "537592759357",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b152bab832ba4a79",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-private-rt-1"
            },
            "tags_all": {
              "Name": "techcorp-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4e176506a09d4b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "rtb-0f139ddfe63722b9c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_1",
            "aws_subnet.techcorp_public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537592759357:route-table/rtb-08077d2a8c4f4c9bf",
            "id": "rtb-08077d2a8c4f4c9bf",
            "owner_id": "537592759357",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a7bec170a05007b9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-private-rt-2"
            },
            "tags_all": {
              "Name": "techcorp-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4e176506a09d4b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "rtb-08077d2a8c4f4c9bf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_2",
            "aws_subnet.techcorp_public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537592759357:route-table/rtb-03abbea3b343a08fb",
            "id": "rtb-03abbea3b343a08fb",
            "owner_id": "537592759357",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-096ed1a448ce1c9a8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tech_public_rt"
            },
            "tags_all": {
              "Name": "tech_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4e176506a09d4b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "rtb-03abbea3b343a08fb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d1e54d0ff8884b7",
            "region": "us-east-1",
            "route_table_id": "rtb-0f139ddfe63722b9c",
            "subnet_id": "subnet-0972274ce46d05394"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "rtbassoc-07d1e54d0ff8884b7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_1",
            "aws_route_table.private_rt_1",
            "aws_subnet.techcorp_private_subnet_1",
            "aws_subnet.techcorp_public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0807b8419347e1053",
            "region": "us-east-1",
            "route_table_id": "rtb-08077d2a8c4f4c9bf",
            "subnet_id": "subnet-01da7fafc903f4acc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "rtbassoc-0807b8419347e1053",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_2",
            "aws_route_table.private_rt_2",
            "aws_subnet.techcorp_private_subnet_2",
            "aws_subnet.techcorp_public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c39b9832b4fc0c3f",
            "region": "us-east-1",
            "route_table_id": "rtb-03abbea3b343a08fb",
            "subnet_id": "subnet-00375a2f3bac72543"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "rtbassoc-0c39b9832b4fc0c3f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.techcorp_public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f633099e67b6cdd",
            "region": "us-east-1",
            "route_table_id": "rtb-03abbea3b343a08fb",
            "subnet_id": "subnet-09599c10ad81927ba"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "rtbassoc-01f633099e67b6cdd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.techcorp_public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537592759357:security-group/sg-065e258342da668a5",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065e258342da668a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "techcorp-alb-sg",
            "name_prefix": "",
            "owner_id": "537592759357",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techcorp-alb-sg"
            },
            "tags_all": {
              "Name": "techcorp-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4e176506a09d4b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "sg-065e258342da668a5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537592759357:security-group/sg-0a3d3bc05e8785de6",
            "description": "Allow SSH to Bastion - TEMPORARY",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3d3bc05e8785de6",
            "ingress": [
              {
                "cidr_blocks": [
                  "197.211.59.96/32"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "techcorp-bastion-sg",
            "name_prefix": "",
            "owner_id": "537592759357",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techcorp-bastion-sg"
            },
            "tags_all": {
              "Name": "techcorp-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4e176506a09d4b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "sg-0a3d3bc05e8785de6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537592759357:security-group/sg-00bf5e9f828131053",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bf5e9f828131053",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a3d3bc05e8785de6"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cd1bacd121596f14"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20260501161502430700000002",
            "name_prefix": "terraform-",
            "owner_id": "537592759357",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f4e176506a09d4b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "sg-00bf5e9f828131053",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537592759357:security-group/sg-0cd1bacd121596f14",
            "description": "Security group for Web Servers (EC2 instances)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd1bacd121596f14",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB only",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-065e258342da668a5"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS from ALB only",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-065e258342da668a5"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a3d3bc05e8785de6"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "techcorp-web-sg",
            "name_prefix": "",
            "owner_id": "537592759357",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "techcorp-web-sg"
            },
            "tags_all": {
              "Name": "techcorp-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4e176506a09d4b6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "sg-0cd1bacd121596f14",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "techcorp_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537592759357:subnet/subnet-0972274ce46d05394",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0972274ce46d05394",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "537592759357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp_private_subnet_1"
            },
            "tags_all": {
              "Name": "techcorp_private_subnet_1"
            },
            "vpc_id": "vpc-0f4e176506a09d4b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "subnet-0972274ce46d05394",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "techcorp_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537592759357:subnet/subnet-01da7fafc903f4acc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01da7fafc903f4acc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "537592759357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp_private_subnet_2"
            },
            "tags_all": {
              "Name": "techcorp_private_subnet_2"
            },
            "vpc_id": "vpc-0f4e176506a09d4b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "subnet-01da7fafc903f4acc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "techcorp_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537592759357:subnet/subnet-00375a2f3bac72543",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00375a2f3bac72543",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "537592759357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp_public_subnet_1"
            },
            "tags_all": {
              "Name": "techcorp_public_subnet_1"
            },
            "vpc_id": "vpc-0f4e176506a09d4b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "subnet-00375a2f3bac72543",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "techcorp_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537592759357:subnet/subnet-09599c10ad81927ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09599c10ad81927ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "537592759357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp_public_subnet_2"
            },
            "tags_all": {
              "Name": "techcorp_public_subnet_2"
            },
            "vpc_id": "vpc-0f4e176506a09d4b6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "subnet-09599c10ad81927ba",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537592759357:vpc/vpc-0f4e176506a09d4b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09eb16964696362ca",
            "default_route_table_id": "rtb-0a10a8d2e25fbb6c8",
            "default_security_group_id": "sg-0edc7f181186260c3",
            "dhcp_options_id": "dopt-0f6c7c20b29a6d234",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f4e176506a09d4b6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a10a8d2e25fbb6c8",
            "owner_id": "537592759357",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-vpc"
            },
            "tags_all": {
              "Name": "techcorp-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "537592759357",
            "id": "vpc-0f4e176506a09d4b6",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}